--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body{
 <div id="map"></div>
 
 <div class="info-panel">
-  <h2>🩴 STEP Guardian</h2>
+  <h2>🦯 STEP Guardian</h2>
   <div class="info-row">Latitude: <span id="lat">—</span></div>
   <div class="info-row">Longitude: <span id="lng">—</span></div>
   <div class="info-row">Distance: <span id="distance">—</span> cm</div>
@@ -107,12 +107,12 @@ const map=L.map('map').setView([14.0,121.0],16);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
  {maxZoom:19,attribution:'© OpenStreetMap'}).addTo(map);
 
-// Shoe icon + radar
+// Blind person icon + radar
 const shoeHTML=`
 <div style="position:relative;width:80px;height:80px;display:flex;align-items:center;justify-content:center;">
   <div class="pulse"></div>
   <div class="sweep"></div>
-  <img src="https://cdn-icons-png.flaticon.com/512/809/809514.png" 
+  <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" 
        style="width:45px;height:45px;z-index:2;filter:drop-shadow(0 0 10px #FFD400);">
 </div>`;
 const shoeIcon=L.divIcon({
@@ -148,7 +148,7 @@ db.ref('shoe').on('value',snap=>{
   lngEl.textContent=lng.toFixed(6);
   distanceEl.textContent=dist>0?dist.toFixed(1):'—';
 
-  // Distance logic
+  // Distance logic (fuzzy)
   if(dist<0 || dist>=150){
     statusEl.textContent="✅ Safe";
     statusEl.className='status-pill safe';
