--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@ const markerHTML=`
 <div style="position:relative;width:80px;height:80px;display:flex;align-items:center;justify-content:center;">
   <div class="pulse"></div>
   <div class="sweep"></div>
-  <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" 
+  <img src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png" 
        style="width:45px;height:45px;z-index:2;filter:drop-shadow(0 0 10px #FFD400);">
 </div>`;
+
 
 const blindIcon=L.divIcon({
   html: markerHTML,
