--- a/index.html
+++ b/index.html
@@ -7,34 +7,104 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-body{margin:0;font-family:'Poppins',sans-serif;background:#000;color:#fff;overflow:hidden;}
-#loginScreen{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);z-index:2000;}
-.login-container{background: rgba(25,25,25,0.95);padding:30px;border-radius:15px;box-shadow:0 0 25px #FFD400;width:320px;text-align:center;backdrop-filter:blur(10px);}
-.login-container h2{color:#FFD400;margin-bottom:20px;}
-.login-container input{width:100%;padding:10px;margin:8px 0;border-radius:10px;border:none;outline:none;}
-.login-container button{width:100%;padding:10px;border:none;background:#FFD400;color:#000;font-weight:700;border-radius:10px;cursor:pointer;transition:0.3s;}
-.login-container button:hover{background:#fff34d;transform:scale(1.05);}
-.error-msg{color:#ff4d4d;margin-top:10px;font-size:14px;}
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:radial-gradient(circle at center,#000,#090909);
+  color:#fff;
+  overflow:hidden;
+}
+
+/* ---------- LOGIN SCREEN ---------- */
+#loginScreen{
+  position:fixed;top:0;left:0;width:100%;height:100%;
+  display:flex;justify-content:center;align-items:center;
+  background:rgba(0,0,0,0.95);z-index:2000;
+}
+.login-container{
+  background: rgba(25,25,25,0.95);
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 0 25px #FFD400;
+  width: 320px;
+  text-align:center;
+  backdrop-filter: blur(10px);
+}
+.login-container h2{
+  color:#FFD400;
+  margin-bottom:20px;
+}
+.login-container input{
+  width:100%;
+  padding:10px;
+  margin:8px 0;
+  border-radius:10px;
+  border:none;
+  outline:none;
+}
+.login-container button{
+  width:100%;
+  padding:10px;
+  border:none;
+  background:#FFD400;
+  color:#000;
+  font-weight:700;
+  border-radius:10px;
+  cursor:pointer;
+  transition:0.3s;
+}
+.login-container button:hover{ background:#fff34d; transform:scale(1.05); }
+.error-msg{ color:#ff4d4d; margin-top:10px; font-size:14px; }
+
+/* ---------- MAP & INFO ---------- */
 #map{height:100vh;width:100%;display:none;}
-.info-panel{position:absolute;top:10px;left:10px;width:320px;background:rgba(25,25,25,0.9);padding:20px;border-radius:15px;z-index:1000;backdrop-filter:blur(10px);box-shadow:0 0 25px #FFD400;display:none;}
-.info-panel h2{text-align:center;color:#FFD400;margin-bottom:12px;font-size:22px;}
-.info-row{display:flex;justify-content:space-between;margin:6px 0;font-size:15px;}
-.status-pill{padding:8px 10px;border-radius:10px;font-weight:700;text-align:center;}
+.info-panel{
+  position:absolute;top:10px;left:10px;width:320px;
+  background:rgba(25,25,25,0.9);
+  padding:20px;border-radius:15px;
+  z-index:1000;backdrop-filter:blur(10px);
+  box-shadow:0 0 25px #FFD400;
+  display:none;
+}
+.info-panel h2{
+  text-align:center;color:#FFD400;margin-bottom:12px;font-size:22px;
+}
+.info-row{
+  display:flex;justify-content:space-between;
+  margin:6px 0;font-size:15px;
+}
+.status-pill{
+  padding:8px 10px;border-radius:10px;
+  font-weight:700;text-align:center;
+}
 .safe{background:#4CAF50;color:#000;}
 .warning{background:#FFC107;color:#000;}
 .alert{background:#ff4d4d;color:#000;}
-#centerBtn{margin-top:15px;width:100%;padding:10px;border:none;background:#FFD400;color:#000;font-weight:700;border-radius:10px;cursor:pointer;transition:0.3s;}
+#centerBtn{
+  margin-top:15px;width:100%;padding:10px;
+  border:none;background:#FFD400;color:#000;
+  font-weight:700;border-radius:10px;
+  cursor:pointer;transition:0.3s;
+}
 #centerBtn:hover{background:#fff34d;transform:scale(1.05);}
-#logoutBtn{margin-top:10px;width:100%;padding:10px;border:none;background:#ff4d4d;color:#000;font-weight:700;border-radius:10px;cursor:pointer;transition:0.3s;}
+#logoutBtn{
+  margin-top:10px;width:100%;padding:10px;
+  border:none;background:#ff4d4d;color:#000;
+  font-weight:700;border-radius:10px;
+  cursor:pointer;transition:0.3s;
+}
 #logoutBtn:hover{background:#ff7373;transform:scale(1.05);}
+
+/* ---------- Radar Animation ---------- */
+@keyframes radarPulse {0%{transform:scale(0.2);opacity:0.7;}70%{transform:scale(2.8);opacity:0;}100%{opacity:0;}}
+@keyframes radarSweep {0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 .pulse{position:absolute;width:30px;height:30px;border-radius:50%;background:rgba(255,212,0,0.3);animation:radarPulse 2.2s infinite;}
 .sweep{position:absolute;width:100px;height:100px;border-top:2px solid rgba(255,212,0,0.5);border-right:2px solid transparent;border-radius:50%;animation:radarSweep 3s linear infinite;transform-origin:center;}
-@keyframes radarPulse{0%{transform:scale(0.2);opacity:0.7;}70%{transform:scale(2.8);opacity:0;}100%{opacity:0;}}
-@keyframes radarSweep{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 </style>
 </head>
 <body>
 
+<!-- ---------- LOGIN SCREEN ---------- -->
 <div id="loginScreen">
   <div class="login-container">
     <h2>🦯 STEP Guardian</h2>
@@ -45,6 +115,7 @@ body{margin:0;font-family:'Poppins',sans-serif;background:#000;color:#fff;overfl
   </div>
 </div>
 
+<!-- ---------- MAP & INFO ---------- -->
 <div id="map"></div>
 
 <div class="info-panel">
@@ -57,12 +128,14 @@ body{margin:0;font-family:'Poppins',sans-serif;background:#000;color:#fff;overfl
   <button id="logoutBtn">🚪 Logout</button>
 </div>
 
+<!-- Firebase & Leaflet -->
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <script>
+/* ---------- FIREBASE CONFIG ---------- */
 const firebaseConfig={
   apiKey:"AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
   authDomain:"step-gps-tracker.firebaseapp.com",
@@ -76,6 +149,7 @@ firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 const db = firebase.database();
 
+/* ---------- LOGIN ---------- */
 const loginScreen = document.getElementById('loginScreen');
 const loginBtn = document.getElementById('loginBtn');
 const errorMsg = document.getElementById('errorMsg');
@@ -92,9 +166,12 @@ loginBtn.addEventListener('click', () => {
       document.querySelector('.info-panel').style.display = 'block';
       initMap();
     })
-    .catch((error) => { errorMsg.textContent = error.message; });
+    .catch((error) => {
+      errorMsg.textContent = error.message;
+    });
 });
 
+/* ---------- LOGOUT ---------- */
 logoutBtn.addEventListener('click', () => {
   auth.signOut().then(() => {
     loginScreen.style.display = 'flex';
@@ -103,18 +180,27 @@ logoutBtn.addEventListener('click', () => {
   });
 });
 
+/* ---------- MAP & RADAR ---------- */
 function initMap() {
   const map = L.map('map').setView([14.0,121.0],16);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19, attribution:'© OpenStreetMap'}).addTo(map);
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+   {maxZoom:19, attribution:'© OpenStreetMap'}).addTo(map);
 
   const markerHTML = `
-    <div style="position:relative;width:80px;height:80px;display:flex;align-items:center;justify-content:center;">
-      <div class="pulse"></div>
-      <div class="sweep"></div>
-      <img src="https://cdn-icons-png.flaticon.com/512/4140/4140048.png" style="width:45px;height:45px;z-index:2;filter:drop-shadow(0 0 10px #FFD400);">
-    </div>`;
+  <div style="position:relative;width:80px;height:80px;display:flex;align-items:center;justify-content:center;">
+    <div class="pulse"></div>
+    <div class="sweep"></div>
+    <img src="https://cdn-icons-png.flaticon.com/512/4140/4140048.png" 
+         style="width:45px;height:45px;z-index:2;filter:drop-shadow(0 0 10px #FFD400);">
+  </div>`;
 
-  const blindIcon = L.divIcon({ html: markerHTML, className:'', iconSize:[80,80], iconAnchor:[40,40] });
+  const blindIcon = L.divIcon({
+    html: markerHTML,
+    className:'',
+    iconSize:[80,80],
+    iconAnchor:[40,40]
+  });
+
   let marker = L.marker([14.0,121.0],{icon:blindIcon}).addTo(map);
   let path = L.polyline([], {color:'#FFD400',weight:4,opacity:0.8}).addTo(map);
 
@@ -124,12 +210,11 @@ function initMap() {
   const statusEl=document.getElementById('status');
   document.getElementById('centerBtn').onclick = () => map.panTo(marker.getLatLng());
 
+  // Firebase realtime update
   db.ref('shoe').on('value', snap => {
-    const data = snap.val();
-    if(!data) return;
-    const lat = data.latitude || 14.0;
-    const lng = data.longitude || 121.0;
-    const dist = data.distance ?? -1;
+    const data = snap.val(); if(!data) return;
+    const lat = data.latitude||14.0, lng = data.longitude||121.0;
+    const dist = data.distance??-1;
 
     marker.setLatLng([lat,lng]);
     path.addLatLng([lat,lng]);
@@ -150,4 +235,4 @@ function initMap() {
 }
 </script>
 </body>
-</html>
+</html> 
